create: connect normalize.scss

--- a/tour-plan/sass/style.sass
+++ b/tour-plan/sass/style.sass
@@ -2,5 +2,7 @@
 @import "var"
 //базовые настройки 
 @import "settings"
+//подключение normalize
+@import "normalize"
 //стили для header
 @import "blocks/_header"
