--- a/tour-plan/sass/blocks/_header.sass
+++ b/tour-plan/sass/blocks/_header.sass
@@ -4,7 +4,7 @@
         display: flex
         align-items: center
         justify-content: space-between
-        padding: 40px 40px
+        padding: 40px 0
     &-search
         margin-right: auto
         margin-left: 108px
