fix: исправление боковых падингов у .header-top

--- a/tour-plan/css/style.css
+++ b/tour-plan/css/style.css
@@ -370,7 +370,7 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 40px 40px;
+  padding: 40px 0;
 }
 
 .header-search {
